--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,12 @@
 .sidebar {
   width: 250px;
   background-color: #f5f5f5;
-  padding: 20px;
+  /* padding: 20px; */
   border-radius: 4px;
+}
+.asideWrapper {
+  position: sticky;
+  top: 0;
+  max-height: calc(100vh - 64px);
+  overflow: auto;
 }
